--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,55 +1,41 @@
-name: Build
+name: Create and publish a Docker image
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
-    branches: [main, docker]
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
+    branches: ['main', 'actions/docker']
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: genshin-zenless
+
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  build-and-push-image:
     runs-on: ubuntu-latest
-    container: node:18
+    permissions:
+      contents: read
+      packages: write
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Build and Publish to Github Packages Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
         with:
-          name: TenkoSpirit/genshin.zenless.club/genshin-zenless
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          dockerfile: Dockerfile
-          tags: latest
 
-      # - name: Deploy package to digitalocean
-      #   uses: appleboy/ssh-action@master
-      #   env:
-      #     GITHUB_USERNAME: ${{ secrets.USERNAME }}
-      #     GITHUB_TOKEN: ${{ secrets. GITHUB_TOKEN }}
-      #   with:
-      #     host: ${{ secrets.DEPLOY_HOST }}
-      #     port: ${{ secrets.DEPLOY_PORT }}
-      #     username: ${{ secrets.DEPLOY_USER }}
-      #     key: ${{ secrets.DEPLOY_KEY }}
-      #     envs: GITHUB_USERNAME, GITHUB_TOKEN
-      #     script: |
-      #       docker login ghcr.io -u $GITHUB_USERNAME -p $GITHUB_TOKEN
-      #       docker pull ghcr.io/my_github_username/my_repository_name/my_image_name:latest
-      #       docker stop containername
-      #       docker system prune -f
-      #       docker run --name containername -dit -p 3000:3000 ghcr.io/my_github_username/my_repository_name/my_image_name:latest
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
