--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-country-flag": "^3.0.2",
     "react-dom": "~18.2.0",
     "swr": "^1.3.0",
-    "zod": "^3.19.0"
+    "tiny-invariant": "^1.2.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@heroicons/react": "^2.0.10",
@@ -43,7 +44,7 @@
     "@types/lodash.isempty": "^4.4.7",
     "@types/node": "18.7.16",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "18.0.18",
+    "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
