--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "~18.2.0",
     "react-country-flag": "^3.0.2",
     "react-dom": "~18.2.0",
+    "rehype-raw": "^6.1.1",
     "swr": "^1.3.0",
     "tiny-invariant": "^1.2.0",
     "zod": "^3.19.1"
