--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/morgan": "^1.9.3",
     "accept-language-parser": "^1.5.0",
     "bcryptjs": "^2.4.3",
+    "clsx": "^1.2.1",
     "compression": "^1.7.4",
     "cuid": "^2.1.8",
     "dayjs": "^1.11.6",
