--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev:server": "cross-env NODE_ENV=development node --inspect --require ./node_modules/dotenv/config ./build/server.js",
     "docker": "docker-compose up -d",
     "format": "prettier --write .",
-    "generate:css": "tailwindcss -i ./app/styles/index.css -o ./app/styles/tailwind.css",
+    "generate:css": "tailwindcss --minify -i ./app/styles/index.css -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma generate && prisma migrate deploy && prisma db seed",
     "start": "cross-env NODE_ENV=production node --require ./node_modules/dotenv/config ./build/server.js",
