--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@prisma/client": "^4.5.0",
-    "@remix-run/express": "^1.7.3",
-    "@remix-run/node": "^1.7.3",
-    "@remix-run/react": "^1.7.3",
+    "@remix-run/express": "^1.7.4",
+    "@remix-run/node": "^1.7.4",
+    "@remix-run/react": "^1.7.4",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
@@ -47,8 +47,8 @@
     "dayjs": "^1.11.6",
     "express": "^4.18.2",
     "ioredis": "^5.2.3",
-    "isbot": "^3.6.1",
-    "jotai": "^1.8.6",
+    "isbot": "^3.6.2",
+    "jotai": "^1.9.0",
     "morgan": "^1.10.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
@@ -63,49 +63,37 @@
     "tiny-invariant": "^1.2.0",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.1",
-    "use-intl": "^2.8.0",
+    "use-intl": "^2.9.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
-    "@remix-run/dev": "^1.7.3",
-    "@remix-run/eslint-config": "^1.7.3",
+    "@remix-run/dev": "^1.7.4",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "@types/accept-language-parser": "^1.5.3",
     "@types/bcryptjs": "^2.4.2",
-    "@types/eslint": "^8.4.7",
-    "@types/node": "^18.11.3",
+    "@types/eslint": "^8.4.9",
+    "@types/node": "^18.11.8",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.0.20",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "autoprefixer": "^10.4.11",
-    "binode": "^1.0.5",
-    "c8": "^7.12.0",
-    "cookie": "^0.5.0",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "esbuild": "^0.15.12",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "happy-dom": "^7.6.0",
-    "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.5.0",
     "tailwindcss": "^3.2.1",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.8",
-    "vite-tsconfig-paths": "^3.5.2",
-    "vitest": "^0.24.3"
+    "typescript": "^4.8.3"
   },
   "engines": {
     "node": ">=16"
