--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "/public/build"
   ],
   "dependencies": {
-    "@headlessui/react": "^1.7.3",
-    "@heroicons/react": "^2.0.12",
+    "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^2.0.13",
     "@prisma/client": "^4.5.0",
-    "@remix-run/express": "^1.7.4",
-    "@remix-run/node": "^1.7.4",
-    "@remix-run/react": "^1.7.4",
+    "@remix-run/express": "^1.7.5",
+    "@remix-run/node": "^1.7.5",
+    "@remix-run/react": "^1.7.5",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
@@ -46,16 +46,16 @@
     "cuid": "^2.1.8",
     "dayjs": "^1.11.6",
     "express": "^4.18.2",
-    "ioredis": "^5.2.3",
-    "isbot": "^3.6.2",
-    "jotai": "^1.9.0",
+    "ioredis": "^5.2.4",
+    "isbot": "^3.6.3",
+    "jotai": "^1.9.1",
     "morgan": "^1.10.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-raw": "^6.1.1",
     "rehype-sanitize": "^5.0.1",
-    "rehype-slug": "^5.0.1",
+    "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
@@ -63,36 +63,39 @@
     "tiny-invariant": "^1.2.0",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.1",
-    "use-intl": "^2.9.0",
+    "use-intl": "^2.9.1",
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.7.4",
+    "@remix-run/dev": "^1.7.5",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "@types/accept-language-parser": "^1.5.3",
     "@types/bcryptjs": "^2.4.2",
-    "@types/eslint": "^8.4.9",
-    "@types/node": "^18.11.8",
+    "@types/eslint": "^8.4.10",
+    "@types/node": "^18.11.9",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.15.12",
-    "eslint": "^8.26.0",
+    "cssnano": "^5.1.14",
+    "esbuild": "^0.15.13",
+    "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.18",
+    "postcss-cli": "^10.0.0",
+    "postcss-import": "^15.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.5.0",
-    "tailwindcss": "^3.2.1",
+    "tailwindcss": "^3.2.2",
     "typescript": "^4.8.3"
   },
   "engines": {
