--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "run-s build:*",
-    "build:css": "npm run generate:css -- --minify",
+    "build:css": "cross-env NODE_ENV=production npm run generate:css -- --verbose",
     "build:remix": "remix build",
     "build:server": "node build.mjs",
     "dev": "run-s build:* && run-p dev:*",
