--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.6.1",
     "tailwindcss": "^3.2.3",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.2-rc"
   },
   "engines": {
     "node": ">=16"
