--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "/public/build"
   ],
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.208.0",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@prisma/client": "^4.6.1",
@@ -60,6 +61,7 @@
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
+    "sharp": "^0.31.2",
     "tiny-invariant": "^1.2.0",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.1",
@@ -77,6 +79,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/sharp": "^0.31.0",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "autoprefixer": "^10.4.13",
