--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "/public/build"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.209.0",
+    "@aws-sdk/client-s3": "^3.213.0",
+    "@formatjs/intl": "^2.5.1",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@prisma/client": "^4.6.1",
-    "@remix-run/express": "^1.7.5",
-    "@remix-run/node": "^1.7.5",
-    "@remix-run/react": "^1.7.5",
+    "@remix-run/express": "^1.7.6",
+    "@remix-run/node": "^1.7.6",
+    "@remix-run/react": "^1.7.6",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
@@ -49,7 +50,7 @@
     "express": "^4.18.2",
     "ioredis": "^5.2.4",
     "isbot": "^3.6.5",
-    "jotai": "^1.9.2",
+    "jotai": "^1.10.0",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.0",
     "nprogress": "^0.2.0",
@@ -70,7 +71,7 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.7.5",
+    "@remix-run/dev": "^1.7.6",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "@types/accept-language-parser": "^1.5.3",
@@ -79,14 +80,14 @@
     "@types/node": "^18.11.9",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
+    "@types/react-dom": "^18.0.9",
     "@types/sharp": "^0.31.0",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.14",
-    "esbuild": "^0.15.13",
+    "esbuild": "^0.15.14",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
@@ -100,7 +101,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.6.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.2-rc"
+    "typescript": "^4.9.3"
   },
   "engines": {
     "node": ">=18"
