--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "clsx": "^1.2.1",
     "compression": "^1.7.4",
     "cuid": "^2.1.8",
+    "cva": "npm:class-variance-authority",
     "dayjs": "^1.11.6",
     "express": "^4.18.2",
     "ioredis": "^5.2.4",
