--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
     "/public/build"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.218.0",
-    "@formatjs/intl": "^2.6.2",
-    "@headlessui/react": "^1.7.4",
+    "@aws-sdk/client-s3": "^3.229.0",
+    "@formatjs/intl": "^2.6.3",
+    "@headlessui/react": "^1.7.5",
     "@heroicons/react": "^2.0.13",
-    "@prisma/client": "^4.7.0",
-    "@remix-run/express": "^1.8.0",
-    "@remix-run/node": "^1.8.0",
-    "@remix-run/react": "^1.8.0",
+    "@prisma/client": "^4.7.1",
+    "@remix-run/express": "^1.8.2",
+    "@remix-run/node": "^1.8.2",
+    "@remix-run/react": "^1.8.2",
     "@types/compression": "^1.7.2",
-    "@types/express": "^4.17.14",
+    "@types/express": "^4.17.15",
     "@types/morgan": "^1.9.3",
     "accept-language-parser": "^1.5.0",
     "bcryptjs": "^2.4.3",
@@ -47,11 +47,11 @@
     "compression": "^1.7.4",
     "cuid": "^2.1.8",
     "cva": "npm:class-variance-authority",
-    "dayjs": "^1.11.6",
+    "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "ioredis": "^5.2.4",
     "isbot": "^3.6.5",
-    "jotai": "^1.11.0",
+    "jotai": "^1.11.2",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.0",
     "nprogress": "^0.2.0",
@@ -65,44 +65,48 @@
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "sharp": "^0.31.2",
+    "superjson": "^1.12.0",
     "tiny-invariant": "^1.2.0",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.1",
-    "use-intl": "^2.9.1",
-    "zod": "^3.19.1"
+    "use-intl": "^2.10.2",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.8.0",
+    "@remix-run/dev": "^1.8.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "@types/accept-language-parser": "^1.5.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.10",
-    "@types/node": "^18.11.10",
+    "@types/node": "^18.11.15",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.0.25",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/sharp": "^0.31.0",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "autoprefixer": "^10.4.13",
+    "chalk": "4.1.2",
+    "commander": "^9.4.1",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.14",
-    "esbuild": "^0.15.16",
-    "eslint": "^8.28.0",
+    "esbuild": "^0.16.6",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.19",
+    "postcss": "^8.4.20",
     "postcss-cli": "^10.1.0",
-    "postcss-import": "^15.0.0",
-    "prettier": "^2.8.0",
-    "prettier-plugin-tailwindcss": "^0.2.0",
-    "prisma": "^4.7.0",
+    "postcss-import": "^15.1.0",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "prisma": "^4.7.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "engines": {
     "node": ">=18"
