--- a/package.json
+++ b/package.json
@@ -30,28 +30,29 @@
     "/public/build"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.231.0",
+    "@aws-sdk/client-s3": "^3.241.0",
     "@formatjs/intl": "^2.6.3",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
-    "@prisma/client": "4.7.1",
+    "@prisma/client": "4.8.1",
     "@remix-run/express": "^1.9.0",
     "@remix-run/node": "^1.9.0",
     "@remix-run/react": "^1.9.0",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.15",
-    "@types/morgan": "^1.9.3",
+    "@types/morgan": "^1.9.4",
     "accept-language-parser": "^1.5.0",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "compression": "^1.7.4",
     "cuid": "^2.1.8",
-    "cva": "npm:class-variance-authority",
+    "daisyui": "^2.46.1",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "ioredis": "^5.2.4",
     "isbot": "^3.6.5",
-    "jotai": "^1.11.2",
+    "jotai": "^1.12.1",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.0",
     "nprogress": "^0.2.0",
@@ -64,8 +65,8 @@
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
-    "sharp": "^0.31.2",
-    "superjson": "^1.12.0",
+    "sharp": "^0.31.3",
+    "superjson": "^1.12.1",
     "tiny-invariant": "^1.2.0",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.1",
@@ -79,21 +80,21 @@
     "@types/accept-language-parser": "^1.5.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.10",
-    "@types/node": "^18.11.16",
+    "@types/node": "^18.11.18",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@types/sharp": "^0.31.0",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@types/react-dom": "^18.0.10",
+    "@types/sharp": "^0.31.1",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.46.1",
     "autoprefixer": "^10.4.13",
     "chalk": "4.1.2",
     "commander": "^9.4.1",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.14",
-    "esbuild": "^0.16.8",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
+    "esbuild": "^0.16.14",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -103,7 +104,7 @@
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "4.7.1",
+    "prisma": "4.8.1",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
