--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "/public/build"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.245.0",
+    "@aws-sdk/client-s3": "^3.254.0",
     "@formatjs/intl": "^2.6.3",
+    "@formkit/auto-animate": "^1.0.0-beta.5",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
-    "@prisma/client": "4.8.1",
-    "@remix-run/express": "^1.10.0",
-    "@remix-run/node": "^1.10.0",
-    "@remix-run/react": "^1.10.0",
+    "@prisma/client": "4.9.0",
+    "@remix-run/express": "^1.11.1",
+    "@remix-run/node": "^1.11.1",
+    "@remix-run/react": "^1.11.1",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.15",
     "@types/morgan": "^1.9.4",
@@ -47,12 +48,12 @@
     "clsx": "^1.2.1",
     "compression": "^1.7.4",
     "cuid": "^2.1.8",
-    "daisyui": "^2.46.1",
+    "daisyui": "^2.47.0",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
-    "ioredis": "^5.2.4",
+    "ioredis": "^5.2.5",
     "isbot": "^3.6.5",
-    "jotai": "^1.13.0",
+    "jotai": "^1.13.1",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.0",
     "nprogress": "^0.2.0",
@@ -66,7 +67,7 @@
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "sharp": "^0.31.3",
-    "superjson": "^1.12.1",
+    "superjson": "^1.12.2",
     "tiny-invariant": "^1.2.0",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.1",
@@ -74,7 +75,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.10.0",
+    "@remix-run/dev": "^1.11.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/accept-language-parser": "^1.5.3",
@@ -82,29 +83,29 @@
     "@types/eslint": "^8.4.10",
     "@types/node": "^18.11.18",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.0.26",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/sharp": "^0.31.1",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "autoprefixer": "^10.4.13",
     "chalk": "4.1.2",
     "commander": "^9.5.0",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.14",
-    "esbuild": "^0.16.16",
-    "eslint": "^8.31.0",
+    "esbuild": "^0.17.3",
+    "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
-    "prettier": "^2.8.2",
+    "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "4.8.1",
+    "prisma": "4.9.0",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
