--- a/package.json
+++ b/package.json
@@ -30,17 +30,18 @@
     "/public/build"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.254.0",
-    "@formatjs/intl": "^2.6.3",
-    "@formkit/auto-animate": "^1.0.0-beta.5",
-    "@headlessui/react": "^1.7.7",
-    "@heroicons/react": "^2.0.13",
+    "@aws-sdk/client-s3": "^3.259.0",
+    "@formatjs/intl": "^2.6.5",
+    "@formkit/auto-animate": "^1.0.0-beta.6",
+    "@headlessui/react": "^1.7.8",
+    "@heroicons/react": "^2.0.14",
     "@prisma/client": "4.9.0",
+    "@remix-run/css-bundle": "^1.11.1",
     "@remix-run/express": "^1.11.1",
     "@remix-run/node": "^1.11.1",
     "@remix-run/react": "^1.11.1",
     "@types/compression": "^1.7.2",
-    "@types/express": "^4.17.15",
+    "@types/express": "^4.17.16",
     "@types/morgan": "^1.9.4",
     "accept-language-parser": "^1.5.0",
     "bcryptjs": "^2.4.3",
@@ -48,12 +49,13 @@
     "clsx": "^1.2.1",
     "compression": "^1.7.4",
     "cuid": "^2.1.8",
-    "daisyui": "^2.47.0",
+    "daisyui": "^2.49.0",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
-    "ioredis": "^5.2.5",
+    "ioredis": "^5.3.0",
     "isbot": "^3.6.5",
     "jotai": "^1.13.1",
+    "lucide-react": "^0.107.0",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.0",
     "nprogress": "^0.2.0",
@@ -70,8 +72,9 @@
     "superjson": "^1.12.2",
     "tiny-invariant": "^1.2.0",
     "unified": "^10.1.2",
-    "unist-util-visit": "^4.1.1",
+    "unist-util-visit": "^4.1.2",
     "use-intl": "^2.10.2",
+    "validator": "^13.7.0",
     "zod": "^3.20.2"
   },
   "devDependencies": {
@@ -86,15 +89,16 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/sharp": "^0.31.1",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
+    "@types/validator": "^13.7.11",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
     "chalk": "4.1.2",
     "commander": "^9.5.0",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.14",
-    "esbuild": "^0.17.3",
-    "eslint": "^8.32.0",
+    "esbuild": "^0.17.5",
+    "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
@@ -104,7 +108,7 @@
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.3",
-    "prettier-plugin-tailwindcss": "^0.2.1",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "prisma": "4.9.0",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
