--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
     "@prisma/client": "4.9.0",
-    "@remix-run/css-bundle": "^1.11.1",
-    "@remix-run/express": "^1.11.1",
-    "@remix-run/node": "^1.11.1",
-    "@remix-run/react": "^1.11.1",
+    "@remix-run/css-bundle": "^1.12.0-pre.2",
+    "@remix-run/express": "^1.12.0-pre.2",
+    "@remix-run/node": "^1.12.0-pre.2",
+    "@remix-run/react": "^1.12.0-pre.2",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.16",
     "@types/morgan": "^1.9.4",
@@ -78,7 +78,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.11.1",
+    "@remix-run/dev": "^1.12.0-pre.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/accept-language-parser": "^1.5.3",
@@ -116,9 +116,5 @@
   },
   "engines": {
     "node": ">=18"
-  },
-  "resolutions": {
-    "**remix-run/**/unset-value": "2.0.1",
-    "**remix-run/dev/xdm/loader-utils": "^2.0.4"
   }
 }
