--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
     "/public/build"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.259.0",
+    "@aws-sdk/client-s3": "^3.261.0",
     "@formatjs/intl": "^2.6.5",
     "@formkit/auto-animate": "^1.0.0-beta.6",
     "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
     "@prisma/client": "4.9.0",
-    "@remix-run/css-bundle": "^1.12.0-pre.2",
-    "@remix-run/express": "^1.12.0-pre.2",
-    "@remix-run/node": "^1.12.0-pre.2",
-    "@remix-run/react": "^1.12.0-pre.2",
+    "@remix-run/css-bundle": "^1.12.0",
+    "@remix-run/express": "^1.12.0",
+    "@remix-run/node": "^1.12.0",
+    "@remix-run/react": "^1.12.0",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.16",
     "@types/morgan": "^1.9.4",
@@ -54,8 +54,8 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.0",
     "isbot": "^3.6.5",
-    "jotai": "^1.13.1",
-    "lucide-react": "^0.107.0",
+    "jotai": "^2.0.0",
+    "lucide-react": "^0.108.0",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.0",
     "nprogress": "^0.2.0",
@@ -78,7 +78,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.12.0-pre.2",
+    "@remix-run/dev": "^1.12.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/accept-language-parser": "^1.5.3",
@@ -90,8 +90,8 @@
     "@types/react-dom": "^18.0.10",
     "@types/sharp": "^0.31.1",
     "@types/validator": "^13.7.11",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "autoprefixer": "^10.4.13",
     "chalk": "4.1.2",
     "commander": "^9.5.0",
@@ -112,7 +112,7 @@
     "prisma": "4.9.0",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": ">=18"
