--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
     "/public/build"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.261.0",
+    "@aws-sdk/client-s3": "^3.267.0",
     "@formatjs/intl": "^2.6.5",
     "@formkit/auto-animate": "^1.0.0-beta.6",
-    "@headlessui/react": "^1.7.8",
-    "@heroicons/react": "^2.0.14",
-    "@prisma/client": "4.9.0",
+    "@headlessui/react": "^1.7.10",
+    "@heroicons/react": "^2.0.15",
+    "@prisma/client": "4.10.0",
     "@remix-run/css-bundle": "^1.12.0",
     "@remix-run/express": "^1.12.0",
     "@remix-run/node": "^1.12.0",
     "@remix-run/react": "^1.12.0",
     "@types/compression": "^1.7.2",
-    "@types/express": "^4.17.16",
+    "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "accept-language-parser": "^1.5.0",
     "bcryptjs": "^2.4.3",
@@ -49,7 +49,7 @@
     "clsx": "^1.2.1",
     "compression": "^1.7.4",
     "cuid": "^2.1.8",
-    "daisyui": "^2.49.0",
+    "daisyui": "^2.50.0",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "ioredis": "^5.3.0",
@@ -57,10 +57,11 @@
     "jotai": "^2.0.0",
     "lucide-react": "^0.109.0",
     "morgan": "^1.10.0",
-    "nanoid": "^4.0.0",
+    "nanoid": "^4.0.1",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
     "rehype-raw": "^6.1.1",
     "rehype-sanitize": "^5.0.1",
     "rehype-slug": "^5.1.0",
@@ -75,7 +76,7 @@
     "unist-util-visit": "^4.1.2",
     "use-intl": "^2.10.2",
     "validator": "^13.9.0",
-    "zod": "^3.20.2"
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.12.0",
@@ -84,20 +85,20 @@
     "@types/accept-language-parser": "^1.5.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.21.0",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.13.0",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/sharp": "^0.31.1",
-    "@types/validator": "^13.7.11",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
+    "@types/validator": "^13.7.12",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "autoprefixer": "^10.4.13",
     "chalk": "4.1.2",
     "commander": "^9.5.0",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.14",
-    "esbuild": "^0.17.5",
+    "esbuild": "^0.17.6",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
@@ -107,10 +108,10 @@
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
-    "prisma": "4.9.0",
-    "tailwindcss": "^3.2.4",
+    "prisma": "4.10.0",
+    "tailwindcss": "^3.2.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
