--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@formkit/auto-animate": "^1.0.0-beta.6",
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.15",
-    "@prisma/client": "4.10.0",
+    "@prisma/client": "4.10.1",
     "@remix-run/css-bundle": "^1.12.0",
     "@remix-run/express": "^1.12.0",
     "@remix-run/node": "^1.12.0",
@@ -54,8 +54,8 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.0",
     "isbot": "^3.6.5",
-    "jotai": "^2.0.0",
-    "lucide-react": "^0.109.0",
+    "jotai": "^2.0.1",
+    "lucide-react": "^0.112.0",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.1",
     "nprogress": "^0.2.0",
@@ -69,6 +69,7 @@
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
+    "remix-utils": "^6.0.0",
     "sharp": "^0.31.3",
     "superjson": "^1.12.2",
     "tiny-invariant": "^1.2.0",
@@ -98,7 +99,7 @@
     "commander": "^9.5.0",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.14",
-    "esbuild": "^0.17.6",
+    "esbuild": "^0.17.7",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
@@ -110,7 +111,7 @@
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
-    "prisma": "4.10.0",
+    "prisma": "4.10.1",
     "tailwindcss": "^3.2.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
