--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "sideEffects": false,
   "scripts": {
     "build": "run-s build:*",
+    "build:postcss": "postcss app/styles/index.scss -o app/styles/main.css --verbose",
     "build:remix": "remix build",
     "build:server": "node build.mjs",
     "dev": "run-s build:* && run-p dev:*",
     "dev:build": "cross-env NODE_ENV=development npm run build:server -- --watch",
     "dev:remix": "cross-env NODE_ENV=development remix watch",
     "dev:server": "cross-env NODE_ENV=development node --inspect --require ./node_modules/dotenv/config ./build/server.js",
+    "dev:postcss": "cross-env NODE_ENV=development npm run build:postcss -- --watch",
     "docker": "docker-compose up -d",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
