--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@headlessui/react": "^1.7.13",
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.17",
+    "@paralleldrive/cuid2": "^2.2.0",
     "@prisma/client": "4.12.0",
     "@remix-run/css-bundle": "^1.15.0",
     "@remix-run/express": "^1.15.0",
@@ -48,7 +49,6 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "compression": "^1.7.4",
-    "cuid": "^2.1.8",
     "daisyui": "^2.51.5",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
